--- a/机试/7.喊7的次数重排.html
+++ b/机试/7.喊7的次数重排.html
@@ -6,22 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<p>给定一个长度为N的数组，存储了打乱顺序的每个人喊'过'的次数，请把它还原成正确的顺序，即数组的第i个元素存储编号i的人喊'过'的次数
+		示例：<br>
+		输入 0 0 0 2 1<br>
+		输出 0 2 0 1 0<br>
+        输入一串打乱的喊7次数，输出准确的顺序<br>
+        例如：输入00021 代表五个人，喊了三次过（逢7过）<br>
+        遇到的就是7，14，17，<br>
+        1  2  3  4  5<br>
+        6  7  8  9  10<br>
+        11 12 13 14 15<br>
+        16 17 <br>
+        分别出现在2号两次和4号一次，准确的顺序是02001
+        </p>
+	</body>
 	<script>
-		// 给定一个长度为N的数组，存储了打乱顺序的每个人喊'过'的次数，请把它还原成正确的顺序，即数组的第i个元素存储编号i的人喊'过'的次数
-		// 示例：
-		// 输入 0 0 0 2 1
-		// 输出 0 2 0 1 0
-        /*输入一串打乱的喊7次数，输出准确的顺序
-        * 例如：输入00021 代表五个人，喊了三次过（逢7过）
-        *       遇到的就是7，14，17，
-        *       1  2  3  4  5
-        *       6  7  8  9  10
-        *       11 12 13 14 15
-        *       16 17 
-        *       分别出现在2号两次和4号一次，
-        *       准确的顺序是02001
-        * */
 
 		// 输入
 		const input = "0 0 0 2 1";
