--- a/机试/4.数组去重和排序.html
+++ b/机试/4.数组去重和排序.html
@@ -6,12 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<p>给定一个乱序的数组，排除所有的重复元素，使每个元素只出现一次，并且连续出现的次数从高到低排列，相同出现次数按照第一次出现顺序进行先后排序，</p>
+		<p>示例：</p>
+		<p>输入 1，3，3，3，3，4，4，4，2，5</p>
+		<p>输出 3，4，1，2，5</p>
+	</body>
 	<script>
-		// 给定一个乱序的数组，排除所有的重复元素，使每个元素只出现一次，并且连续出现的次数从高到低排列，相同出现次数按照第一次出现顺序进行先后排序，
-		// 示例：
-		// 输入 1，3，3，3，3，4，4，4，2，5
-		// 输出 3，4，1，2，5
 
 		const input = [3, 3, 3, 3, 4, 4, 4, 2, 5, 1, 1, 1, 1, 1];
 		const unique = Array.from(new Set(input));
